Updated Giving/TransactionEntry Block  - Reimplemented pulling ACH from recent check  - Fixed payment information collapse on mobile  - Fixed + improved auto-changing to a valid date when frequency is changed  - Added error highlighting on validation  - Can now select individual accounts to show

--- a/RockWeb/Themes/NewpointeMain/Styles/theme.css
+++ b/RockWeb/Themes/NewpointeMain/Styles/theme.css
@@ -6707,6 +6707,9 @@ th.dow {
 td.day.new {
   color: #808080 !important;
 }
+.datepicker.datepicker-dropdown:after {
+  border-bottom-color: #404040;
+}
 /* hide block panels */
 .panel.panel-block {
   border: 0;
